# translator

./: .gitignore  Cargo.toml  README.md
src/: cache.rs  cli.rs  config.rs  env_file.rs  history.rs  input.rs  main.rs  prompt.rs  task.rs  translator.rs
