[package]
name = "translator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "translate"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
rig = "0.39.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
