[package]
name = "rig-translator-cli"
version = "0.1.1"
edition = "2021"
description = "A streaming AI translation CLI powered by rig with multi-provider configuration and local caching."
license = "Apache-2.0"
repository = "https://github.com/dongrv/translator"
homepage = "https://github.com/dongrv/translator"
readme = "README.md"
keywords = ["translator", "cli", "ai", "llm", "rig"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "translate"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
rig = "0.39.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
